--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	</head>
 	<body>
 	<header>
+		<h3 class="hidden">Introduction Picture</h3>
 		<img src="images/Ahmed-Benbrahim2.png" alt="Ahmed Benbrahim" class="logo">
 		<nav>
+							<h3 class="hidden">Navigation Bar</h3>
+
 			<ul>
 				<li class="current"><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
@@ -22,6 +25,7 @@
 
 	<section class="home-hero">
 		<div class="container">
+		<h3 class="hidden">About Me</h3>
 		<h6 class="content">
 			My name is Ahmed Benbrahim, A student at Fanshawe College taking Interactive Media Design Program. This website is my final project for the first semester. It compiles all the knowledge I acquired during the first semester. Here, I will showcase some of my projects.
 		</h6>
@@ -33,6 +37,8 @@
 
 
 	<section class="program">
+				<h3 class="hidden">Program Outline</h3>
+
 		<!--program item 1-->
 
 		<figure class="program-item">
@@ -73,9 +79,12 @@
 
 
 	<footer>
+
+
 		<div class="container">
 			<div class="col-1">
 			<nav class="f-links">
+				<h3 class="hidden">Footer Navigation</h3>
 			<ul>
 				<li class="current"><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
@@ -86,6 +95,7 @@
 			</div>
 
 			<div class="col-2">
+
 				<p>Connect with me through:</p>
 				<a class="fa fa-facebook" href="https://www.facebook.com"></a>
 				<a class="fa fa-twitter" href="https://twitter.com"></a>
