--- a/design.html
+++ b/design.html
@@ -9,8 +9,12 @@
 </head>
 <body >
 	<header>
+				<h3 class="hidden"> Introduction</h3>
+
 		<img src="images/Ahmed-Benbrahim2.png" alt="Ahmed Benbrahim" class="logo">
 		<nav>
+					<h3 class="hidden"> Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
@@ -60,6 +64,8 @@
 		<div class="container">
 			<div class="col-1">
 			<nav class="f-links">
+						<h3 class="hidden"> Footer Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
