--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,13 @@
         <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     </head>
 <body >
+		<h3 class="hidden">Introduction</h3>
+
 	<header>
 		<img src="images/Ahmed-Benbrahim2.png" alt="Ahmed Benbrahim" class="logo">
 		<nav>
+		<h3 class="hidden">Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
@@ -30,6 +34,8 @@
 	</section>
 
 	<section class="contact">
+	<h3 class="hidden"> Contact Form</h3>
+
 		<!--program item 1-->
 
 		<div class="container">
@@ -73,6 +79,8 @@
 		<div class="container">
 			<div class="col-1">
 			<nav class="f-links">
+			<h3 class="hidden"> Footer Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="Photos.html">Photos</a></li>
