--- a/Photos.html
+++ b/Photos.html
@@ -8,9 +8,14 @@
         <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     </head>
 <body>
+<h3 class="hidden"> Introduction</h3>
+
+
 	<header>
 		<img src="images/Ahmed-Benbrahim2.png" alt="Ahmed Benbrahim" class="logo">
 		<nav>
+			<h3 class="hidden">Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li class="current"><a href="Photos.html">Photos</a></li>
@@ -21,11 +26,11 @@
 	</header>
 
 	<section class="home-hero">
+
 		<div class="container">
 		<h1 class="content-photo">
 			See Some Of The Photos I Have Taken.
 		
-		<a class="fas fa-arrow-down" href="#"></a>
 		</h1>
 	</div>
 	
@@ -88,43 +93,43 @@
 		<figure class="part-2">
 		<script src="./js/script.js"></script>
 
-			<div class="slideshow-inner2">
-			  <div class="mySlides fade2">
+			<div class="slideshow-inner">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/9.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/10.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/11.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/12.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/13.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/14.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/15.jpg' alt=""/>
 			  </div>
 
-			  <div class="mySlides fade2">
+			  <div class="mySlides fade">
 
 			    <img  src='./images/16.jpg' alt=""/>
 			  </div>
@@ -140,6 +145,8 @@
 		<div class="container">
 			<div class="col-1">
 			<nav class="f-links">
+			<h3 class="hidden"> Footer Navigation</h3>
+
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li class="current"><a href="Photos.html">Photos</a></li>
